Fixed columns on mobile

--- a/style.css
+++ b/style.css
@@ -11,29 +11,3 @@ body
 	width: 100%;
 	height: 100%;
 }
-
-.left
-{
-	float: left;
-}
-
-.right
-{
-	float: right;
-}
-
-@media only screen and (min-width: 25cm)
-{
-	.left, .right
-	{
-		width: 50%;
-	}
-}
-
-@media (max-width: 25cm)
-{
-	.left, .right
-	{
-		width: 100%;
-	}
-}
